[package]
name = "bannana-pho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
futures-util = "0.3.21"

num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"

serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_repr = "0.1.7"

tokio-tungstenite = "0.16.1"

dotenv = "0.15.0"
rand = "0.8.5"

hmac = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"

redis = "0.21.5"

log = "0.4.14"
pretty_env_logger = "0.4.0"